--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,23 @@
     <h1>HADOOP测试</h1>
     <div class="agileinfo_main_grid">
         <div class="w3agile_budget divborder">
-            <h4>保存输入内容，并创建文件</h4>
+            <h4>自动生成10条订单信息，通过kafka接收文件内容，保存到HDFS(文件名为创建当天日期的txt)</h4>
+            <input type="submit" value="生成" id="generator"/>
+        </div>
+    </div>
+    <div class="agileinfo_main_grid">
+        <div class="w3agile_budget divborder">
+            <h4>kafka接收文件内容，保存到HDFS(文件名为创建当天日期的txt)</h4>
+            <div class="styled-input w3_styled_input_textarea">
+                <textarea id="kafkaContent" placeholder="填写内容 " required=" "></textarea>
+            </div>
+            <input type="submit" value="保存" id="kafkaSubmit"/>
+        </div>
+    </div>
+
+    <div class="agileinfo_main_grid">
+        <div class="w3agile_budget divborder">
+            <h4>HDFS保存输入内容，并创建文件</h4>
             <div class="styled-input w3_styled_input_textarea">
                 <input type="text" id="writeName" placeholder="文件名称(默认当前日期)"/>
             </div>
@@ -27,7 +43,7 @@
 
     <div class="agileinfo_main_grid">
         <div class="w3agile_budget divborder">
-            <h4>文件上传</h4>
+            <h4>HDFS文件上传</h4>
             <div class="styled-input w3_styled_input_textarea">
                 <input id="uploadFile" style="width: 88%;" type="file" name="uploadFile"/>
             </div>
@@ -37,7 +53,7 @@
 
     <div class="agileinfo_main_grid">
         <div class="w3agile_budget divborder">
-            <h4>文件列表</h4>
+            <h4>HDFS文件列表</h4>
             <input type="submit" value="刷新" id="refreshSub"/>
             <table id="hor-minimalist-a" style="width: 88%;">
                 <thead>
@@ -64,6 +80,40 @@
 
         $("#refreshSub").click(function () {
             fileList();
+        })
+
+        $("#generator").click(function () {
+            $.ajax({
+                url: '/kafka/generator',
+                type: 'post',
+                async: false,
+                success: function () {
+                    fileList();
+                    alert("生成结束");
+                },
+                error: function () {
+                    alert("生成失败");
+                }
+            })
+        })
+
+        $("#kafkaSubmit").click(function () {
+            var kafkaContent = $("#kafkaContent").val();
+            $.ajax({
+                url: '/kafka/req',
+                type: 'post',
+                dataType: 'text',
+                data: {
+                    kafkaContent: kafkaContent
+                },
+                success: function () {
+                    fileList();
+                    alert("提交成功");
+                },
+                error: function () {
+                    alert("提交失败");
+                }
+            })
         })
 
         $("#wirteSub").click(function () {
@@ -98,10 +148,10 @@
             }
             //判断文件类型,我这里根据业务需求判断的是Excel文件
             var fileName1 = $file1.substring($file1.lastIndexOf(".") + 1).toLowerCase();
-            if (fileName1 != "xls" && fileName1 != "xlsx" && fileName1 != "txt") {
-                alert("请选择Execl或txt文件!");
-                return false;
-            }
+            // if (fileName1 != "xls" && fileName1 != "xlsx" && fileName1 != "txt") {
+            //     alert("请选择Execl或txt文件!");
+            //     return false;
+            // }
             //判断文件大小
             var size1 = $("input[name='uploadFile']")[0].files[0].size;
             if (size1 > 104857600) {
@@ -174,7 +224,7 @@
                         "        <td>" + data[i].size + "B</td>\n" +
                         "        <td>" + data[i].num + "</td>\n" +
                         "        <td>" +
-                        "           <a href=\"javaScript:void(0);\" class='view' fileName=\"" + data[i].name + "\">查看</a>" +
+                        "           <a href=\"javaScript:void(0);\" class='view' fileName=\"" + data[i].name + "\">查看/下载</a>" +
                         "           <span>|</span>" +
                         "           <a href=\"javaScript:void(0);\" class='del' fileName=\"" + data[i].name + "\">删除</a></td>\n" +
                         "        <td></td>\n" +
